# TranslateWord

./: .gitignore  README.md  Translate.csv  TranslateWord.py  TranslateWord.spec  Translated.csv  pyproject.toml  remindo.csv  requirements.txt  test.ipynb
src/translateword/: main.py
