[project]
name = "translateword"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Riku Yamada", email = "96092291+RRRRRRR-777@users.noreply.github.com" }
]
dependencies = [
    "requests>=2.32.3",
    "bs4>=0.0.2",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/translateword"]
